--- a/frontend/src/styles/landing.css
+++ b/frontend/src/styles/landing.css
@@ -3,17 +3,37 @@ body, html {
 }
 
 #landing-page {
-    background-image: url("../assets/landing-image.jfif");
-    height: 70vh;
-    background-position: center;
+    background-image: url("../assets/Car_Background.jpg");
+    height: 87vh;
+    /* background-position: center; */
+    background-size: auto;
+    /* top: -100px; */
     background-size: cover;
+    object-fit:contain;
+    /* background-position: 50%;
+    object-fit: fill; */
+    width: 100%;
+    /* height: 300px; */
     background-repeat: no-repeat;
     color: white;
     text-align: left;
+    align-items: center;
 }
-
+.title{
+    /* width: 100vw; */
+    padding-top: 5vh;
+    text-align: center;
+    margin-left: 270px;
+}
 h1 {
-    padding-top: 30vh;
+    padding-top: 15vh;
+    font-weight: 700;
+    font-family: "Arial", sans-serif;
+    color: #fff;
+    /* letter-spacing: .1em; */
+    line-height: 1.2;
+    max-width: 960px;
+    margin: 0 42px;
 }
 
 h1, h4 {
